# option-visualizer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
.claude/: CLAUDE.md
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  PER_STRIKE_IV_IMPLEMENTATION.md  README.md  calculator.py  debug_image_parser.py  debug_ocr.py  demo_iv_skew.py  image_parser.py  main.py  market_data.py  ocr.py  pyproject.toml  schemas.py  tastytrade_client.py  test_black_scholes.py  test_main.py  test_schemas.py
docs/: VOLATILITY_SMILE.md
frontend/: .env.production  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: Button.tsx  Collapsible.tsx  DateSelector.tsx  ExpirationDropdown.tsx  GreeksChart.jsx  GreeksChart.tsx  GreeksVisualization.jsx  GreeksVisualization.tsx  HelpTooltip.tsx  InputSection.jsx  InputSection.tsx  PLChart.tsx  PositionsTable.jsx  PositionsTable.test.jsx  PositionsTable.test.tsx  PositionsTable.tsx  ProbabilityMetrics.jsx  ProbabilityMetrics.tsx  Skeleton.tsx  StepProgress.tsx  StickyHeader.tsx  SymbolAutocomplete.jsx  SymbolAutocomplete.tsx  UploadSection.jsx  UploadSection.tsx
frontend/src/components/VolatilitySkew/: SkewChart.tsx  VolatilitySkew.tsx  index.ts
frontend/src/hooks/: useCalculation.ts  useChartZoom.ts  useMarketData.ts  useOptionChain.ts  useTheme.ts  useVolatilitySkew.ts  useVolatilitySmile.ts
frontend/src/types/: index.ts
scripts/: setup-wif.sh
(+3 files in other folders)
